added testbench for training entire net

--- a/Final Project/.vscode/tasks.json
+++ b/Final Project/.vscode/tasks.json
@@ -22,6 +22,16 @@
                 "panel": "new"
             },
             "problemMatcher": []
+        },
+        {
+            "label": "TRAIN Testbench",
+            "type": "shell",
+            "command": "iverilog -o train.out train.v conv.v fc.v & vvp train.out",
+            "presentation": {
+                "reveal": "always",
+                "panel": "new"
+            },
+            "problemMatcher": []
         }
     ]
 }
