--- a/Final Project/seven_seg_test/seven_seg.ucf
+++ b/Final Project/seven_seg_test/seven_seg.ucf
@@ -1,13 +1,13 @@
 
 # PlanAhead Generated physical constraints 
 
-NET "led[0]" LOC = AL11;
-NET "led[1]" LOC = AJ10;
-NET "led[2]" LOC = AK9;
-NET "led[3]" LOC = AF9;
-NET "led[4]" LOC = AN14;
-NET "led[5]" LOC = AN13;
-NET "led[6]" LOC = AP12;
+NET "seg[0]" LOC = AL11;
+NET "seg[1]" LOC = AJ10;
+NET "seg[2]" LOC = AK9;
+NET "seg[3]" LOC = AF9;
+NET "seg[4]" LOC = AN14;
+NET "seg[5]" LOC = AN13;
+NET "seg[6]" LOC = AP12;
 NET "digit[0]" LOC = J19;
 NET "digit[1]" LOC = L18;
 NET "digit[2]" LOC = K18;
